# wet-1

./: CMakeLists.txt  Node.h  Pair.h  Player.cpp  Player.h  Team.cpp  Team.h  Tree.h  main.cpp  worldcup23a1.cpp  worldcup23a1.h
